--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -96,6 +96,7 @@
               <div class="valid-feedback">Looks good!</div>
             </div>
 
+            <!-- Add Campground Button -->
             <div class="d-grid">
               <button
                 class="btn btn-light btn-block mb-3 border border-light shadow-sm"
