--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,7 +1,9 @@
 <% layout('layouts/boilerplate')%>
 
 <!--Grid Layout -->
-<div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4">
+<div
+  class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-3 row-cols-xxl-4 g-4"
+>
   <% for (let campground of campgrounds) { %>
   <div class="col">
     <div class="card h-100">
@@ -26,7 +28,7 @@
           />
           <!-- If no ratings display n/a  else display rating-->
           <% if (campground.rating === 0){ %>
-          <p class="d-inline">n/a</p>
+          <p class="d-inline">new</p>
           <% } else { %>
           <div class="d-inline"><%= campground.rating %></div>
           <br />
