--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-expand-lg bg-white border-bottom">
+<nav class="navbar sticky-top navbar-expand-lg bg-white border-bottom on-top">
   <div class="container-fluid d-flex justify-content-between">
     <!-- Logo -->
     <a class="navbar-brand" style="color: yellow" href="/">
