--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -55,8 +55,16 @@
   <% } %>
 </div>
 
-<div class="position-sticky bottom-0" style="width: 100%; height: 80px">
-  <div class="position-absolute top-0 start-50 translate-middle">
+<div
+  class="position-sticky"
+  style="
+    background: rgba(255, 192, 203, 0);
+    bottom: 0;
+    width: 100%;
+    height: 200px;
+  "
+>
+  <div class="position-absolute top-50 start-50 translate-middle">
     <a href="/campgrounds/map">
       <button
         type="button"
