--- a/views/campgrounds/map.ejs
+++ b/views/campgrounds/map.ejs
@@ -1,4 +1,6 @@
 <% layout("layouts/boilerplate")%>
+<link rel="stylesheet" href="/stylesheets/map.css" />
+
 <div id="cluster-map"></div>
 <script>
   const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
