--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,4 +1,5 @@
 <% layout("layouts/boilerplate")%>
+<link href="/css/style.css" rel="stylesheet" type="text/css" />
 
 <div class="container d-flex justify-content-center align-items-center mt-3">
   <div class="row">
