--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,5 @@
 <% layout("layouts/boilerplate")%>
 <link rel="stylesheet" href="/stylesheets/stars.css" />
-<link rel="stylesheet" href="/stylesheets/index.css" />
 
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <!-- Left Column-->
@@ -9,7 +8,31 @@
     <div class="sticky-md-top card mb-3">
       <!-- Carousel Images-->
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
+       
+      <!-- If no images diaply sad icon -->
+      <% if (campground.images.length === 0){ %>
+      <div
+        class="bg-light card-img-top landscape img-fluid d-flex flex-column align-items-center justify-content-center"
+      >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="86"
+            height="86"
+            fill="gray"
+            class="bi bi-emoji-frown"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+            />
+            <path
+              d="M4.285 12.433a.5.5 0 0 0 .683-.183A3.498 3.498 0 0 1 8 10.5c1.295 0 2.426.703 3.032 1.75a.5.5 0 0 0 .866-.5A4.498 4.498 0 0 0 8 9.5a4.5 4.5 0 0 0-3.898 2.25.5.5 0 0 0 .183.683zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zm4 0c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5z"
+            />
+          </svg>
+        <p class="text-muted mt-3">No photos yet!</p>
+      </div>
+      <% } else { %>
+         <div class="carousel-inner">
           <% campground.images.forEach((img, i) => { %>
           <!-- Images -->
           <div class="carousel-item <%= i === 0 ? "active" : ""%>">
@@ -37,6 +60,7 @@
         <span class="visually-hidden">Next</span>
       </button>
       <% } %> 
+      <% } %> 
     </div>
     <!-- Card Body -->
       <div class="card-body">
@@ -52,7 +76,7 @@
         width="12"
         height="12"
       />
-          <!-- If no ratings display n/a  else display rating-->
+          <!-- If no ratings display new  else display rating-->
           <% if (campground.rating === 0){ %>
           <p class="d-inline">new</p>
           <% } else { %>
