--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -20,10 +20,10 @@
       rel="stylesheet"
     />
 
-    <!-- Map Styles-->
-    <link href="/stylesheets/app.css" rel="stylesheet" />
+    <!-- Map Styles CSS -->
+    <link rel="stylesheet" href="/stylesheets/app.css" />
 
-    <!-- Extra Css-->
+    <!-- Extra CSS-->
     <link rel="stylesheet" href="/stylesheets/index.css" />
   </head>
   <body class="d-flex flex-column vh-100">
