--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -53,7 +53,9 @@
             <div class="mb-3">
               <label class="form-label" for="price">Price per night</label>
               <div class="input-group">
-                <span class="input-group-text" id="price-label">$</span>
+                <span class="input-group-text btn-gray" id="price-label"
+                  >$</span
+                >
                 <input
                   type="text"
                   class="form-control"
@@ -100,7 +102,7 @@
             <!-- Add Campground Button -->
             <div class="d-grid">
               <button
-                class="btn btn-light btn-block mb-3 border border-light shadow-sm"
+                class="btn btn-light btn-block mb-3 border border-light shadow-sm btn-gray"
               >
                 Add Campground
               </button>
