--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -37,11 +37,7 @@
       <ul class="navbar-nav ms-auto">
         <% if(!currentUser) { %>
         <a class="nav-link" href="/login">Login</a>
-        <a
-          class="nav-link rounded-pill border border-warning border-2"
-          href="/register"
-          >Register</a
-        >
+        <a class="nav-link register-btn" href="/register">Register</a>
         <% }else { %>
         <a class="nav-link" href="/logout"
           >Logout
