--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -40,7 +40,7 @@
             </div>
             <div class="d-grid">
               <button
-                class="btn btn-light btn-block mb-3 border border-light shadow-sm"
+                class="btn btn-light btn-block mb-3 border border-light shadow-sm btn-gray"
               >
                 Login
               </button>
