--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,14 @@
 <footer class="footer bg-light py-3 mt-auto">
   <div class="container">
     <span>&copy Yelp-Camp 2022</span>
+    <span
+      >by
+      <a
+        class="antoni"
+        href="https://github.com/AntoniKeszycki"
+        target="”_blank”"
+        >Antoni</a
+      ></span
+    >
   </div>
 </footer>
