--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,17 +14,104 @@
   </head>
 
   <body>
-    <div class="h-100 d-flex justify-content-center align-items-center text-white">
-      <div>
-        <h1>Welcome to <span>Yelp-Camp!</span></h1></br>
-        <!-- <h5>Share Your Campground With The World!</h5></br> -->
-        <a href="/campgrounds" class="btn btn-secondary btn-lg border-white bg-none rounded-pill">Explore</a>
+    <div
+      class="h-100 d-flex justify-content-center align-items-start text-black"
+    >
+      <div class="mt-3">
+        <div
+          class="card-body px-5 py-5"
+          style="width: 100%; background-color: rgba(255, 255, 255, 0)"
+        >
+          <img
+            src="https://res.cloudinary.com/dbkdxsoia/image/upload/v1662219472/YelpCamp/add-svgrepo-com_ifbpuk.svg"
+            alt=""
+            width="84"
+            height="84"
+            class="card-img-top mt-1 mb-5"
+          />
+          <!--<h1 class="mb-3">Welcome to <span>Yelp-Camp!</span></h1>-->
+          <h1 class="mb-1 fw-light">
+            Discover imagined campgrounds all over the world!
+          </h1>
+          <h4 class="mb-3 fw-light text-black-50">
+            Yelp-Camp list best fictional campgrounds on Earth! With
+          </h4>
+          <div class="card-text text-center mb-1 mt-1">
+            <svg
+              style="vertical-align: -0.1em"
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="#ffc107"
+              class="bi bi-plus-circle-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"
+              />
+            </svg>
+            <p class="card-text d-inline fw-light">
+              Add your own envisioned campgrounds!
+            </p>
+          </div>
+          <div class="card-text text-center mb-1">
+            <svg
+              style="vertical-align: -0.1em"
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="#ffc107"
+              class="bi bi-pencil-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"
+              />
+            </svg>
+            <p class="card-text d-inline fw-light">
+              Leave comments and rate your favourite ones!
+            </p>
+          </div>
+          <div class="card-text text-center mb-3">
+            <svg
+              style="vertical-align: -0.1em"
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="#ffc107"
+              class="bi bi-geo-alt-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"
+              />
+            </svg>
+            <p class="card-text d-inline fw-light">
+              See fake locations on the map!
+            </p>
+          </div>
+
+          <a
+            href="/campgrounds"
+            class="btn btn-secondary btn-lg border-white rounded-pill mt-1 mb-3"
+            >Explore</a
+          >
+        </div>
       </div>
     </div>
-  <footer class="footer ficxed-bottom text-white-50">
-    <p>&copy; 2022</p>
-  </footer>
 
+    <footer class="footer ficxed-bottom text-white-50">
+      <p class="d-inline px-2">&copy; 2022</p>
+      <p class="d-inline px-2 antoni">
+        by
+        <a
+          class="antoni"
+          href="https://github.com/AntoniKeszycki"
+          target="”_blank”"
+          >Antoni</a
+        >
+      </p>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
